tutorials/networkpolicy/allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-communication
spec:
  podSelector:
    matchLabels:
      app: python-server
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app: python-server-second
