tutorials/networkpolicy/deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-communication
spec:
  podSelector:
    matchLabels:
      app: python-server
  policyTypes:
  - Ingress
